1. Улучшения Collection API [#304260]