@@ -4,6 +4,8 @@ import org.junit.Test;
 import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
+import java.util.Set;
+
 import static org.hamcrest.core.Is.is;
 import static org.junit.Assert.*;
 
@@ -11,12 +13,11 @@ public class NotifyAccountTest {
 
     @Test
     public void sent() {
-        List<Account> accounts = Arrays.asList(
-                new Account("123", "Petr Arsentev", "eDer3432f"),
+        List<Account> accounts = List.of(new Account("123", "Petr Arsentev", "eDer3432f"),
                 new Account("142", "Petr Arsentev", "000001"),
                 new Account("142", "Petr Arsentev", "000001"));
         HashSet<Account> expect = new HashSet<>(
-                Arrays.asList(new Account("123", "Petr Arsentev", "eDer3432f"),
+                Set.of(new Account("123", "Petr Arsentev", "eDer3432f"),
                         new Account("142", "Petr Arsentev", "000001")));
         assertThat(NotifyAccount.sent(accounts), is(expect));
     }
